Fix bug 100813. put CLASSPATH in the right place

BUG: 100813